$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-05-25 [B] Fixing duplicates during batch-add (thread ID 57717) {GauGau}
2009-05-25 [D] Added documentation about updater {GauGau}
2009-05-25 [C] Removed unneeded tables from thumbnail sorting {GauGau}
2009-05-25 [O] Replaced hardcoded linebreaks with global variable {GauGau}
2009-05-22 [A] Turned calendar pop-up and stats pop-up into greyboxes {GauGau}
2009-05-22 [O] Made fruity theme more standards-compliant {GauGau}
2009-05-22 [O] Moved draghandle class from individual to global stylesheet {GauGau}
2009-05-19 [O] Added separate overall stylesheet that contains theme-independant styles {GauGau}
2009-05-19 [C] Replaced cluetip plugin with greybox plugin {GauGau}
2009-05-16 [B] Fixed first level album thumbs not showing in pre PHP 5.0.2 {SaWey}
2009-05-15 [B] Fixed CAPTCHA Session not correctly starting {SaWey}
2009-05-15 [B] Fixed CAPTCHA not enabled according to config {SaWey}
2009-05-15 [B] Fixed users not able to edit pics and wrong albums being shown in editpics {SaWey}
2009-05-12 [O] Added admin buttons for album management to album manager and thumbnail view {Paver}
2009-05-12 [A] Added a timestamp to the generated form_token to increase security, now we can also set the lifetime of a token. {SaWey}
2009-05-12 [B] Fixed keyword manager delete to use form token {Paver}
2009-05-11 [B] Fixed admin approval email now sent in admin language for user registrations {SaWey}
2009-05-11 [B] Fixed not able to create new user from admin panel {SaWey}
2009-05-10 [O] Got rid of some undefined index error messages in admin.php {SaWey}